--- a/styles.css
+++ b/styles.css
@@ -269,6 +269,8 @@ body{
   height:100%;
   object-fit:cover;
   display:block;
+  object-position: 50% 25%; /* moves the image up */
+  display:block;
 }
 .mcard__fade{
   position:absolute; inset:0;
